--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Module#3 Webpack",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development"
+    "build": "cross-env NODE_ENV=production webpack --mode production",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open --hot"
   },
   "author": "Yurii Hodynskyi <hodynskyiyk@gmail.com>",
   "license": "ISC",
@@ -25,8 +25,9 @@
     "@babel/runtime": "^7.6.0",
     "@svgr/webpack": "^4.3.2",
     "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^1.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "clean-webpack-plugin": "^1.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
